--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,7 +5,7 @@ name: CI test
 # Controls when the workflow will run
 on:
   push:
-    branches: main
+    branches: dev
     tags: v*
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
