--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,8 +5,7 @@ name: CI test
 # Controls when the workflow will run
 on:
   push:
-    tags: 
-      - 'v*'
+    branches: dev
 
   workflow_dispatch:
 
@@ -16,7 +15,7 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: macOS
-
+    if: startsWith(github.ref, 'refs/tags/v')
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
