--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,7 +5,8 @@ name: CI test
 # Controls when the workflow will run
 on:
   push:
-    branches: dev
+    branches: 
+      - dev
 
   workflow_dispatch:
 
