--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,11 +5,9 @@ name: CI test
 # Controls when the workflow will run
 on:
   push:
-    branches: 
-      - dev
+    branches: [dev, main]
   pull_request:
-    branches:
-      - dev
+    branches: [dev, main]
 
   workflow_dispatch:
 
@@ -19,7 +17,7 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: macOS
-    if: ${{ startsWith(github.event.head_commit.message, 'alpha') }}
+    # if: ${{ startsWith(github.event.head_commit.message, 'alpha') }}
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
