--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,12 +4,14 @@ name: CI test
 
 # Controls when the workflow will run
 on:
-  push:
-    branches: [dev, main]
-  pull_request:
-    branches: [dev, main]
-
   workflow_dispatch:
+    inputs:
+      branches:
+        required: true
+        default: 'dev'
+        options:
+          - main
+          - dev
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -23,7 +25,7 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
         with:
-          ref: dev
+          ref: ${{ inputs.branches }}
       - name: Run a one-line script
         run: echo Hello, world!
 
