--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,6 +33,6 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
         with:
-          ref: ${{ inputs.branches }}
+          ref: ${{ inputs.fastlane }}
       - name: Run a one-line script
         run: echo ${{ inputs.branches }}
