--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,6 +7,7 @@ on:
   workflow_dispatch:
     inputs:
       branches:
+        description: 'Choose branches' 
         required: true
         default: 'dev'
         type: choice
@@ -14,6 +15,7 @@ on:
           - main
           - dev
       fastlane:
+        description: 'Choose lane' 
         required: true
         default: 'beta'
         type: choice
